--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /*
-Theme Name: MontareMocheta Custom Theme
+Theme Name: Montare Mocheta Theme
 Theme URI: https://montaremocheta.ro
-Author: Razvan Simion
-Author URI: https://github.com/Razvan-Simion
-Description: Tema custom profesionala pentru montaremocheta.ro
-Version: 1.0
+Author: ELOGY DESIGN
+Description: Temă custom optimizată pentru montaremocheta.ro (SEO, viteză, structură curată, design system cu CSS variables).
+Version: 1.0.0
 Text Domain: montaremocheta
 */
+
+/* Stilurile principale sunt în assets/css/main.css */
